fix: incorrect color for linkables on ios

--- a/src/components/link/Link.module.css
+++ b/src/components/link/Link.module.css
@@ -1,4 +1,5 @@
 .linkableElement {
   text-decoration: none;
+  color: inherit;
 }
 
